# fca-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: FM3.cxt  N5.cxt  cube.cxt  test.cxt
data/real_world/: california.cxt  diagnosis.cxt  gewuerz_planer.cxt  olympic_disciplines.cxt
data/standard_lattices/: M3.cxt
data/test_data/: containing_M3.cxt
libraries/: productdim.py
src/additivity/: __init__.py  additive_realizer.py
src/fca_utils/: __init__.py  additivity.py  context.py  lattice.py  parser.py
src/linear_extension/: __init__.py  linear_extension.py  realizer.py  sat_realizer.py  sat_solver.py
src/visualize/: __init__.py  dim_draw.py  fdp_centralized.py  fdp_m.py
test/: additive_realizer.py  dim_draw_3d_example.py  dim_draw_example.py  fdp_centralized.py  fdp_m.py  sat_realizer.py  sat_solver.py
